frontend/src/components/Video/Video.module.css
.video {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 101%;
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* equals 16:9 */
  height: 0;
}

.videoBackground {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%; /* of padding-bottom of videoWrapper */

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: var(--purple);
  color: var(--light-green);
  font-size: 1.5rem;

  animation: placeholder 1s infinite linear alternate;
}

@keyframes placeholder {
  0% {
    opacity: 1;
  }
  20% {
    opacity: 1;
  }
  90% {
    opacity: 0.9;
  }
  100% {
    opacity: 0.9;
  }
}

.videoPlayer {
  width: 100%;
  height: 100%;
}

.character {
  font-family: "Roboto", sans-serif;
  animation: loading infinite linear;
}

@keyframes loading {
  0% {
    translate: 0 0;
  }
  25% {
    translate: 0 0.2rem;
  }
  75% {
    translate: 0 -0.2rem;
  }
  100% {
    translate: 0 0;
  }
}

.videoTitleWrapper {
  width: 100%;
  min-height: 3rem;
}

.videoTitle {
  font-size: 2rem;
  color: white;
}

.videoTitleLoader {
  height: 100%;
  width: 100%;
  background-color: var(--purple);
  animation: placeholder 1s infinite linear alternate;
}

